# rocket_server

./: Cargo.toml  Rocket.toml  readme.md
site/static/: index.html  main.css
src/: error.rs  main.rs  session.rs
