[package]
name = "rocket_server_recipes"
version = "0.1.0"
authors = ["Collins Muriuki <murerwacollins@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
failure = "0.1.5"
failure_derive ="0.1.5"
diesel = {version="1.4.2", features=["postgres"]}
diesel_database_recipes = { path = "../diesel_database_recipes" }

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["diesel_postgres_pool"]